--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   date_format: ^2.0.7
   get:
   easy_localization: ^3.0.1
+  pull_to_refresh: ^2.0.0
 
 dev_dependencies:
   flutter_test:
